# digital_taximeter

./: .gitignore  README.md  pyproject.toml
taximeter/: __init__.py  cli.py  logger.py  taximeter.py  utils.py
tests/: test_taximeter.py
