[project]
name = "01-digital-taximeter"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrea Alonso",email = "andreacor001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
